# MagicBuild

./: CMakeLists.txt  Setup Instructions & Resources.txt  main.cpp
.github/workflows/: cmake.yml
